# t31

./: Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
data/batches/batch_20260621_000/: metadata.json
data/batches/batch_20260621_000/trajectories/: channel_A_001.csv  channel_A_002.csv  channel_A_003.csv  channel_A_004.csv  channel_A_005.csv  channel_A_006.csv  channel_A_007.csv  channel_A_008.csv  channel_A_009.csv  channel_A_010.csv  channel_A_011.csv  channel_A_012.csv  channel_A_013.csv  (+98 more)
data/batches/batch_20260621_001/: metadata.json
nano_dispersion/: __init__.py  config.py
nano_dispersion.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
nano_dispersion/algorithms/: __init__.py  batch_stats.py  diffusion_fitting.py  drift_estimation.py  msd.py  stokes_einstein.py  trajectory_qc.py
nano_dispersion/api/: main.py  routes.py
nano_dispersion/cli/: main.py
nano_dispersion/data_generator/: __init__.py  sample_generator.py
nano_dispersion/models/: __init__.py  database.py  orm.py  schemas.py
nano_dispersion/reports/: __init__.py  exporter.py
nano_dispersion/services/: __init__.py  batch_service.py  task_manager.py
nano_dispersion/tests/: conftest.py  test_batch_service_integration.py  test_batch_stats.py  test_cli.py  test_diffusion_fitting.py  test_drift_estimation.py  test_msd.py  test_stokes_einstein.py  test_trajectory_qc.py
results/: batch_1_anomalies.csv  batch_1_calibration.csv  batch_1_msd_summary.csv  batch_1_report.json  batch_1_report.md  batch_1_trajectories.csv
(+118 files in other folders)
