[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nano-dispersion"
version = "0.1.0"
description = "微流控芯片纳米颗粒扩散分析后端服务"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Lab Team" }]
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "sqlalchemy>=2.0.23",
    "numpy>=1.26.0",
    "pandas>=2.1.0",
    "scipy>=1.11.0",
    "scikit-learn>=1.3.0",
    "python-multipart>=0.0.6",
    "aiofiles>=23.2.0",
    "click>=8.1.0",
    "rich>=13.7.0",
    "tabulate>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.25.0",
]

[project.scripts]
nano-dispersion = "nano_dispersion.cli.main:cli"

[tool.setuptools.packages.find]
include = ["nano_dispersion*"]

[tool.pytest.ini_options]
testpaths = ["nano_dispersion/tests"]
python_files = "test_*.py"
addopts = "-v --tb=short"

[tool.ruff]
line-length = 120
target-version = "py310"
